# LuxRender

./: .gitignore  .gitmodules  .hgignore  CMakeLists.txt  Configuration.cmake  README.md  README.txt  makelux.sh  org.luxrender.luxrenderui.metainfo.xml  org.luxrender.luxrenderui.yml
ext/: CMakeLists.txt
src/lux/: .gitignore  CMakeLists.txt  CMakeLists.txt.old  Info.plist  License.md  Readme.md  lux.spec  qtgui-dark-theme.tar.xz  qtgui-light-theme.tar.xz
src/lux/accelerators/: bruteforce.cpp  bruteforce.h  bvhaccel.cpp  bvhaccel.h  embree.cpp  embree.h  mbvhaccel.cpp  mbvhaccel.h  nbvh.cpp  nbvh.h  qbvhaccel.cpp  qbvhaccel.h  simd.h  tabreckdtree.cpp  tabreckdtreeaccel.h
src/lux/cameras/: environment.cpp  environment.h  orthographic.cpp  orthographic.h  perspective.cpp  perspective.h
src/lux/cmake/: Dependencies.cmake  liblux.cmake  luxcomp.cmake  luxconsole.cmake  luxmerger.cmake  luxrender.cmake  pylux.cmake
src/lux/cmake/exportmaps/: linux_symbol_exports.map  unexported_symbols.map
src/lux/console/: commandline.cpp  commandline.h  luxconsole.cpp
src/lux/core/: api.cpp  asyncstream.cpp  bsh.h  camera.cpp  camera.h  cameraresponse.cpp  context.cpp  context.h  contribution.cpp  contribution.h  dynload.cpp  dynload.h  error.h  exrio.cpp  exrio.h  fastmutex.h  film.cpp  film.h  imagereader.cpp  imagereader.h  light.cpp  light.h  material.cpp  material.h  mipmap.h  octree.h  paramset.cpp  paramset.h  photonmap.cpp  photonmap.h  pngio.cpp  primitive.cpp  primitive.h  randomgen.h  renderer.h  rendererstatistics.cpp  rendererstatistics.h  renderfarm.cpp  renderfarm.h  renderinghints.cpp  (+15 more)
src/lux/core/queryable/: queryable.cpp  queryable.h  queryableattribute.h  queryableregistry.cpp  queryableregistry.h
src/lux/core/reflection/bsdf/: multibsdf.h
src/lux/core/reflection/bxdf/: irawan.cpp  irawan.h
src/lux/core/reflection/microfacetdistribution/: anisotropic.h  blinn.h
src/lux/cpp_api/: lux_api.cpp  lux_instance.h
src/lux/cpp_api/test/: cpp_api_test.cpp
src/lux/doxygen/: doxygen.template
src/lux/film/: fleximage.cpp  fleximage.h
src/lux/integrators/: bidirectional.cpp  bidirectional.h  directlighting.cpp  exphotonmap.cpp  path.cpp  sppm.cpp  sppm.h
src/lux/lights/: area.cpp  distant.cpp  distant.h  infinite.cpp  infinitesample.cpp  pointlight.cpp  pointlight.h  projection.cpp  projection.h  sky.cpp  sky2.cpp  spot.cpp  spot.h  sun.cpp
src/lux/lights/sphericalfunction/: sphericalfunction.cpp  sphericalfunction.h  sphericalfunction_ies.cpp
src/lux/materials/: carpaint.cpp  carpaint.h  cloth.cpp  cloth.h  doubleside.cpp  doubleside.h  glass.cpp  glass.h  glass2.h  glossy.cpp  glossy.h  glossy2.cpp  glossy2.h  glossytranslucent.cpp  glossytranslucent.h  layeredmaterial.cpp  layeredmaterial.h  matte.cpp  matte.h  mattetranslucent.cpp  mattetranslucent.h  metal.cpp  metal.h  metal2.cpp  metal2.h  mirror.cpp  mirror.h  mixmaterial.cpp  mixmaterial.h  null.h  roughglass.cpp  roughglass.h  scattermaterial.cpp  scattermaterial.h  shinymetal.cpp  shinymetal.h  velvet.cpp  velvet.h
src/lux/python/: pycontext.h  pydoc_context.h
src/lux/qtgui/: aboutdialog.cpp  gammawidget.cpp  guiutil.cpp  lenseffects.ui  lenseffectswidget.cpp  lightgroupwidget.cpp  luxrender.ui  mainwindow.cpp  mainwindow.hxx  panewidget.cpp  queue.cpp  renderview.cpp  tonemap.ui
src/lux/qtgui/icons/macos/: luxfilm.icns  luxqueue.icns  luxrender.icns  luxscene.icns
src/lux/renderers/: samplerrenderer.cpp  samplerrenderer.h  sppmrenderer.cpp  sppmrenderer.h
src/lux/renderers/sppm/: hashgrid.cpp  hitpoints.cpp  hitpoints.h  lookupaccel.cpp  lookupaccel.h  photonsampler.h
src/lux/renderers/statistics/: samplerstatistics.cpp  samplerstatistics.h  sppmstatistics.cpp  sppmstatistics.h
src/lux/samplers/: lowdiscrepancy.cpp  lowdiscrepancy.h  metrosampler.cpp  metrosampler.h  random.cpp  random.h
src/lux/server/: renderserver.cpp  renderserver.h
src/lux/shapes/: deferred.cpp  deferred.h  hairfile.cpp  hairfile.h  heightfield.cpp  heightfield.h  hyperboloid.cpp  loopsubdiv.cpp  loopsubdiv.h  mesh.cpp  mesh.h  meshbarytriangle.cpp  meshmicrodisplacementtriangle.cpp  meshwaldtriangle.cpp  nurbs.cpp  nurbs.h  plymesh.cpp  stlmesh.cpp
src/lux/textures/: add.h  band.h  bilerp.h  blackbody.h  blender_base.h  blender_blend.h  blender_clouds.h  blender_distortednoise.h  blender_magic.h  blender_marble.h  blender_musgrave.h  blender_noise.h  blender_stucci.h  blender_texlib.h  blender_voronoi.h  blender_wood.h  brick.h  cauchytexture.h  checkerboard.cpp  checkerboard.h  cloud.h  colordepth.cpp  colordepth.h  constant.h  densitygrid.h  dots.h  equalenergy.h  exponential.h  fbm.h  frequencytexture.h  fresnelcolor.h  gaussiantexture.h  harlequin.h  hitpointcolor.h  imagemap.cpp  imagemap.h  irregulardata.h  marble.h  mix.h  multimix.h  (+11 more)
src/lux/tools/: luxcomp.cpp  luxmerger.cpp
src/lux/volumes/: clearvolume.cpp  clearvolume.h  cloudvolume.h  exponentialvolume.h  heterogeneous.cpp  heterogeneous.h  homogeneous.cpp  homogeneous.h  volumegrid.cpp
src/luxrays/: .gitignore  CMakeLists.txt  Configuration.cmake
src/luxrays/accelerators/: mbvhaccel.cpp
src/luxrays/cmake/: Dependencies.cmake  KernelPreprocess.cmake  PlatformSpecific.cmake
src/luxrays/cmake/exportmaps/: unexported_symbols.map
src/luxrays/include/luxrays/: luxrays.h
src/luxrays/include/luxrays/core/: accelerator.h  dataset.h  exttrianglemesh.h  intersectiondevice.h  utils.h
src/luxrays/include/luxrays/core/bvh/: bvhbuild.h
src/luxrays/include/luxrays/core/color/: color.h  swcspectrum.h
src/luxrays/include/luxrays/core/geometry/: matrix4x4.h  normal.h  point.h  raybuffer.h  uv.h  vector.h
src/luxrays/include/luxrays/utils/: lexical.h  memory.h  ocl.h  properties.h  threadsafe.h
src/luxrays/src/luxrays/: CMakeLists.txt
src/luxrays/src/luxrays/accelerators/: bvhaccel.cpp
src/luxrays/src/luxrays/core/: accelerator.cpp  dataset.cpp  exttrianglemesh.cpp
src/luxrays/src/luxrays/idevices/: nativeidevice.cpp
src/luxrays/src/luxrays/textures/: blender_noiselib.cpp
src/luxrays/src/luxrays/utils/: ocl.cpp  properties.cpp
(+42 files in other folders)
